--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_CAPTCHA_API_KEY="apikey"
-VITE_JSAPI_URL="VITE_JSAPI_URL"
+VITE_JSAPI_URL="https://3709a082b57f.eu-west-3.captcha-sdk.awswaf.com/3709a082b57f/jsapi.js"
